Huge refactor of index.js * Refactored HSLConsoleClient class to be JSON data provider for HR signals * Added HSLHttpServer class to be a lightweight HTTP server that streams HR data via Server-Stream-Events (SSE) * Created client index.html that subscribes to SSE and renders PPG data stream in a simple canvas

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS native bindings to HeartSensorLibrary",
   "main": "index.js",
   "scripts": {
-    "build": "cmake-js compile",
+    "build": "cmake-js compile --debug",
     "test": "mocha --reporter spec"
   },
   "repository": {
@@ -25,6 +25,11 @@
   "devDependencies": {},
   "dependencies": {
     "cmake-js": "^6.1.0",
-    "node-addon-api": "^3.1.0"
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "http-shutdown": "^1.2.2",
+    "node-addon-api": "^3.1.0",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
