--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {},
   "dependencies": {
     "cmake-js": "^6.1.0",
+    "dateformat": "^4.5.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "http-shutdown": "^1.2.2",
